--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </style>
   </head>
   <body>
+    <script>
+      (function(){try{var s=localStorage.getItem('lilygo_theme');var light=s==='light'||(s!=='dark'&&window.matchMedia('(prefers-color-scheme: light)').matches);document.body.style.backgroundColor=light?'#f8fafc':'#0f172a';}catch(e){}})();
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
